--- a/Src/Aps.Domain/Aps.Domain.csproj
+++ b/Src/Aps.Domain/Aps.Domain.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Guard.cs" />
     <Compile Include="DomainException.cs" />
+    <Compile Include="ICompanyName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\TextValuePair.cs" />
   </ItemGroup>
