--- a/Src/Aps.Domain.AccountStatement.Tests/Aps.Domain.AccountStatement.Tests.csproj
+++ b/Src/Aps.Domain.AccountStatement.Tests/Aps.Domain.AccountStatement.Tests.csproj
@@ -61,6 +61,16 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Tests\Account_statement_integrity_checks.cs" />
+    <Compile Include="Tests\Aggregated_account_statements.cs" />
+    <Compile Include="Tests\Consistent_representation_of_account_statements.cs" />
+    <Compile Include="Tests\Consistent_representation_of_entry_types.cs" />
+    <Compile Include="Tests\Current_account_statement.cs" />
+    <Compile Include="Tests\Account_statement_integrity_checks.Fixture.cs" />
+    <Compile Include="Tests\Aggregated_account_statements.Fixture.cs" />
+    <Compile Include="Tests\Consistent_representation_of_account_statements.Fixture.cs" />
+    <Compile Include="Tests\Consistent_representation_of_entry_types.Fixture.cs" />
+    <Compile Include="Tests\Current_account_statement.Fixture.cs" />
     <Compile Include="Tests\Fincancial_balances.cs" />
     <Compile Include="Tests\Fincancial_balances.Fixture.cs" />
     <Compile Include="Tests\Monetary_values.cs" />
@@ -68,6 +78,8 @@
     <Compile Include="Tests\Parsing_numeric_value_from_a_text_value_pair.cs" />
     <Compile Include="Tests\Parsing_numeric_value_from_a_text_value_pair.Fixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\Previous_account_statements.Fixture.cs" />
+    <Compile Include="Tests\Previous_account_statements.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
