--- a/Src/Aps.Domain/Aps.Domain.csproj
+++ b/Src/Aps.Domain/Aps.Domain.csproj
@@ -40,12 +40,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountStatements\Balance.cs" />
+    <Compile Include="AccountStatements\CalendarMonth.cs" />
     <Compile Include="AccountStatements\Money.cs" />
+    <Compile Include="AccountStatements\NumericValue.cs" />
     <Compile Include="Guard.cs" />
     <Compile Include="DomainException.cs" />
-    <Compile Include="ICompanyName.cs" />
+    <Compile Include="IAccountId.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\TextValuePair.cs" />
+    <Compile Include="StringExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
