--- a/Src/Aps.Domain/Aps.Domain.csproj
+++ b/Src/Aps.Domain/Aps.Domain.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Guard.cs" />
     <Compile Include="DomainException.cs" />
     <Compile Include="IAccountId.cs" />
+    <Compile Include="IScrapeSessionResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\TextValuePair.cs" />
     <Compile Include="StringExtensions.cs" />
