--- a/Src/Aps.Domain.AccountStatement.Tests/Aps.Domain.AccountStatement.Tests.csproj
+++ b/Src/Aps.Domain.AccountStatement.Tests/Aps.Domain.AccountStatement.Tests.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\Previous_account_statements.Fixture.cs" />
     <Compile Include="Tests\Previous_account_statements.cs" />
+    <Compile Include="Tests\Stubs\ScrapeResultStub.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
