--- a/Src/Aps.Domain/Aps.Domain.csproj
+++ b/Src/Aps.Domain/Aps.Domain.csproj
@@ -51,7 +51,7 @@
     <Compile Include="IAccountId.cs" />
     <Compile Include="IScrapeSessionResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Common\TextValuePair.cs" />
+    <Compile Include="Common\ScrapeResultDataPair.cs" />
     <Compile Include="StringExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
