--- a/Src/Aps.Domain/Aps.Domain.csproj
+++ b/Src/Aps.Domain/Aps.Domain.csproj
@@ -43,10 +43,15 @@
     <Compile Include="AccountStatements\CalendarMonth.cs" />
     <Compile Include="AccountStatements\Money.cs" />
     <Compile Include="AccountStatements\NumericValue.cs" />
+    <Compile Include="Common\CreditCardCredential .cs" />
+    <Compile Include="Common\DateOfBirthCredential.cs" />
+    <Compile Include="Common\IdentityNumberCredential .cs" />
+    <Compile Include="Common\UserNameCredential .cs" />
     <Compile Include="EnumExtensions.cs" />
     <Compile Include="Guard.cs" />
     <Compile Include="DomainException.cs" />
     <Compile Include="ICompanyName.cs" />
+    <Compile Include="ICredential.cs" />
     <Compile Include="ICustomerId.cs" />
     <Compile Include="IAccountId.cs" />
     <Compile Include="IScrapeSessionResult.cs" />
