--- a/Src/Aps.Domain/Aps.Domain.csproj
+++ b/Src/Aps.Domain/Aps.Domain.csproj
@@ -43,10 +43,13 @@
     <Compile Include="AccountStatements\CalendarMonth.cs" />
     <Compile Include="AccountStatements\Money.cs" />
     <Compile Include="AccountStatements\NumericValue.cs" />
-    <Compile Include="Common\CreditCardCredential .cs" />
-    <Compile Include="Common\DateOfBirthCredential.cs" />
-    <Compile Include="Common\IdentityNumberCredential .cs" />
-    <Compile Include="Common\UserNameCredential .cs" />
+    <Compile Include="Credential\SecurityField.cs" />
+    <Compile Include="Credential\IdentificationField.cs" />
+    <Compile Include="Credential\CreditCardNumber.cs" />
+    <Compile Include="Credential\DateOfBirth.cs" />
+    <Compile Include="Credential\IdentityNumber.cs" />
+    <Compile Include="Credential\EmailAddress.cs" />
+    <Compile Include="Credential\UserNameCredential .cs" />
     <Compile Include="EnumExtensions.cs" />
     <Compile Include="Guard.cs" />
     <Compile Include="DomainException.cs" />
@@ -58,6 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\ScrapeResultDataPair.cs" />
     <Compile Include="StringExtensions.cs" />
+    <Compile Include="Validator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Account\" />
