--- a/Src/Aps.Domain.Account/Aps.Domain.Account.Tests.csproj
+++ b/Src/Aps.Domain.Account/Aps.Domain.Account.Tests.csproj
@@ -61,7 +61,10 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AccountStatus_identity.cs" />
     <Compile Include="Account_identity.cs" />
+    <Compile Include="DomainTypes\Credentials.cs" />
+    <Compile Include="Fixtures\AccountStatus_identity.Fixture.cs" />
     <Compile Include="Fixtures\Account_identity.Fixture.cs" />
     <Compile Include="DomainTypes\Account.cs" />
     <Compile Include="DomainTypes\AccountId.cs" />
