--- a/Src/Aps.Domain.AccountStatement.Tests/Aps.Domain.AccountStatements.Tests.csproj
+++ b/Src/Aps.Domain.AccountStatement.Tests/Aps.Domain.AccountStatements.Tests.csproj
@@ -7,7 +7,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Aps.Domain.AccountStatements.Tests</RootNamespace>
-    <AssemblyName>Aps.Domain.AccountStatement.Tests</AssemblyName>
+    <AssemblyName>Aps.Domain.AccountStatements.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -61,24 +61,18 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="DomainTypes\IAccountStatementRepository.cs" />
     <Compile Include="Fixtures\Account_statement_equality.Fixture.cs" />
     <Compile Include="Fixtures\Account_statement_factory.Fixture.cs" />
-    <Compile Include="DomainTypes\AccountStatementFactory.cs" />
-    <Compile Include="DomainTypes\AccountStatement.cs" />
     <Compile Include="Account_statement_factory.cs" />
     <Compile Include="Account_statement_equality.cs" />
-    <Compile Include="DomainTypes\AccountStatementId.cs" />
     <Compile Include="Account_statement_identity.cs" />
     <Compile Include="Fixtures\Account_statement_identity_equality.Fixture.cs" />
     <Compile Include="Stubs\AccountIdStub.cs" />
     <Compile Include="Account_statement_integrity_checks.cs" />
-    <Compile Include="Aggregated_account_statements.cs" />
     <Compile Include="Consistent_representation_of_account_statements.cs" />
     <Compile Include="Consistent_representation_of_entry_types.cs" />
     <Compile Include="Current_account_statement.cs" />
     <Compile Include="Fixtures\Account_statement_integrity_checks.Fixture.cs" />
-    <Compile Include="Fixtures\Aggregated_account_statements.Fixture.cs" />
     <Compile Include="Fixtures\Consistent_representation_of_account_statements.Fixture.cs" />
     <Compile Include="Fixtures\Consistent_representation_of_entry_types.Fixture.cs" />
     <Compile Include="Fixtures\Current_account_statement.Fixture.cs" />
@@ -110,7 +104,9 @@
       <Name>Aps.Domain</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="DomainTypes\" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
