--- a/Src/Aps.Domain.Company.Tests/Aps.Domain.Company.Tests.csproj
+++ b/Src/Aps.Domain.Company.Tests/Aps.Domain.Company.Tests.csproj
@@ -67,6 +67,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="DomainTypes\CompanyName.cs" />
     <Compile Include="Fixtures\Company_Identity.Fixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Company_Identity.cs" />
@@ -76,7 +77,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="DomainTypes\" />
     <Folder Include="Stubs\" />
   </ItemGroup>
   <Choose>
