--- a/Src/Aps.Domain.Company.Tests/Aps.Domain.Company.Tests.csproj
+++ b/Src/Aps.Domain.Company.Tests/Aps.Domain.Company.Tests.csproj
@@ -68,9 +68,11 @@
   </Choose>
   <ItemGroup>
     <Compile Include="DomainTypes\CompanyName.cs" />
-    <Compile Include="Fixtures\Company_Identity.Fixture.cs" />
+    <Compile Include="Fixtures\CompanyName_Identity.Fixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CompanyName_Identity.cs" />
     <Compile Include="Company_Identity.cs" />
+    <Compile Include="CompanyFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
