--- a/Src/Aps.Domain/Aps.Domain.csproj
+++ b/Src/Aps.Domain/Aps.Domain.csproj
@@ -56,9 +56,12 @@
     <Compile Include="Common\Balance.cs" />
     <Compile Include="Common\CalendarMonth.cs" />
     <Compile Include="AccountStatements\IAccountStatementRepository.cs" />
+    <Compile Include="Common\AccountStatmentEntryType.cs" />
+    <Compile Include="Common\DataType.cs" />
     <Compile Include="Common\Money.cs" />
     <Compile Include="Common\NumericValue.cs" />
     <Compile Include="Common\EncryptionStub.cs" />
+    <Compile Include="Common\StatementEntryDataTypeAttribute.cs" />
     <Compile Include="Credential\Password.cs" />
     <Compile Include="Credential\SecurityCode.cs" />
     <Compile Include="Credential\PinNumber.cs" />
