Added Fixtures - remove credit card value object

--- a/Src/Aps.Domain.Customer.Tests/Aps.Domain.Customer.Tests.csproj
+++ b/Src/Aps.Domain.Customer.Tests/Aps.Domain.Customer.Tests.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Ccv_Number_Fixture.cs" />
     <Compile Include="CreditCardNumber.cs" />
     <Compile Include="Credit_card_number.cs" />
-    <Compile Include="Credit_card_number.Fixture.cs" />
+    <Compile Include="Fixtures\Credit_card_number.Fixture.cs" />
     <Compile Include="CustomerRegistrationAPS2.cs" />
     <Compile Include="CustomerRegistrationAPS1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -81,6 +81,7 @@
       <Name>Aps.Domain</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
