--- a/Src/Aps.Domain.Customer.Tests/Aps.Domain.Customer.Tests.csproj
+++ b/Src/Aps.Domain.Customer.Tests/Aps.Domain.Customer.Tests.csproj
@@ -61,9 +61,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Ccv.cs" />
-    <Compile Include="CcvNumber.cs" />
-    <Compile Include="Ccv_Number_Fixture.cs" />
+    <Compile Include="Ccv_Number.cs" />
+    <Compile Include="Fixtures\Ccv_Number.Fixture.cs" />
     <Compile Include="Credit_card_number.cs" />
     <Compile Include="Fixtures\Credit_card_number.Fixture.cs" />
     <Compile Include="CustomerRegistrationAPS2.cs" />
