Had to remove a number of customer files as well as comment out a test

--- a/Src/Aps.Domain.Customer.Tests/Aps.Domain.Customer.Tests.csproj
+++ b/Src/Aps.Domain.Customer.Tests/Aps.Domain.Customer.Tests.csproj
@@ -61,10 +61,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Ccv_Number.cs" />
-    <Compile Include="Fixtures\Ccv_Number.Fixture.cs" />
     <Compile Include="Credit_card_number.cs" />
-    <Compile Include="Fixtures\Credit_card_number.Fixture.cs" />
     <Compile Include="CustomerRegistrationAPS2.cs" />
     <Compile Include="CustomerRegistrationAPS1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -79,7 +76,9 @@
       <Name>Aps.Domain</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Fixtures\" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
