added a test for a text field on a statement entry

--- a/Src/Aps.Domain/Aps.Domain.csproj
+++ b/Src/Aps.Domain/Aps.Domain.csproj
@@ -55,6 +55,10 @@
     <Compile Include="AccountStatements\AccountStatementId.cs" />
     <Compile Include="AccountStatements\AccountStatmentEntry.cs" />
     <Compile Include="AccountStatements\AccountStatmentEntryFactory.cs" />
+    <Compile Include="AccountStatements\DataTypeConverters\BalanceDataTypeConverter.cs" />
+    <Compile Include="AccountStatements\IDataTypeConverter.cs" />
+    <Compile Include="AccountStatements\DataTypeConverters\TextDataTypeConverter.cs" />
+    <Compile Include="Common\TextValue.cs" />
     <Compile Include="Common\Balance.cs" />
     <Compile Include="Common\CalendarMonth.cs" />
     <Compile Include="AccountStatements\IAccountStatementRepository.cs" />
