added an electricity used formatting test and a KilowattHour value object

--- a/Src/Aps.Domain/Aps.Domain.csproj
+++ b/Src/Aps.Domain/Aps.Domain.csproj
@@ -56,8 +56,10 @@
     <Compile Include="AccountStatements\AccountStatmentEntry.cs" />
     <Compile Include="AccountStatements\AccountStatmentEntryFactory.cs" />
     <Compile Include="AccountStatements\DataTypeConverters\BalanceDataTypeConverter.cs" />
+    <Compile Include="AccountStatements\DataTypeConverters\KilowattHourTypeConverter.cs" />
     <Compile Include="AccountStatements\IDataTypeConverter.cs" />
     <Compile Include="AccountStatements\DataTypeConverters\TextDataTypeConverter.cs" />
+    <Compile Include="Common\KilowattHour.cs" />
     <Compile Include="Common\TextValue.cs" />
     <Compile Include="Common\Balance.cs" />
     <Compile Include="Common\CalendarMonth.cs" />
