--- a/Src/Aps.Domain/Aps.Domain.csproj
+++ b/Src/Aps.Domain/Aps.Domain.csproj
@@ -56,11 +56,12 @@
     <Compile Include="AccountStatements\AccountStatmentEntry.cs" />
     <Compile Include="AccountStatements\AccountStatmentEntryFactory.cs" />
     <Compile Include="AccountStatements\DataTypeConverters\BalanceDataTypeConverter.cs" />
+    <Compile Include="AccountStatements\DataTypeConverters\DurationTypeConverter.cs" />
     <Compile Include="AccountStatements\DataTypeConverters\KilowattHourTypeConverter.cs" />
     <Compile Include="AccountStatements\DataTypeConverters\PercentageTypeConverter.cs" />
     <Compile Include="AccountStatements\IDataTypeConverter.cs" />
     <Compile Include="AccountStatements\DataTypeConverters\TextDataTypeConverter.cs" />
-    <Compile Include="Common\KilowattHour.cs" />
+    <Compile Include="Common\Duration.cs" />
     <Compile Include="Common\Percentage.cs" />
     <Compile Include="Common\TextValue.cs" />
     <Compile Include="Common\Balance.cs" />
